--- a/capstone-project/src/index.css
+++ b/capstone-project/src/index.css
@@ -1,13 +1,55 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* navbar begins */
+.nav-link {
+  font-family: 'Karla', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: black;
+}
+.navbar-brand img {
+  width: 195px;
+  height: 76px;
+}
+
+/* Navbar ends       */
+
+/* Hero section starts */
+.little-lemon-heading {
+  font-family: Markazi Text, serif;
+  font-weight: 500;
+  font-size: 56px;
+  color: #f4ce14;
+
+}
+
+.hero-chicago {
+  font-family: Markazi Text, serif;
+  font-weight: 300;
+  font-size: 36px;
+  color: #ffff;
+  margin-top: -20px;
+}
+
+.brand-statement {
+  font-family: Karla, serif;
+  font-weight: 500px;
+  font-size: 20px;
+  color: white;
+  max-width: 269px;
+  margin-top: 30px ;
+}
+
+button {
+  background-color:#f4ce14;
+  color: black;
+  font-weight: 500;
+  padding: 10px;
+  border-radius: 15px;
+  margin: 20px 0px;
+  border:none ;
+
 }
