--- a/capstone-project/src/index.css
+++ b/capstone-project/src/index.css
@@ -104,9 +104,12 @@ color: #EE9972;
 
 .card-text {
   font-family: Karla, sans-serif;
-  font-size: 300;
+  font-size: 16px;
+  font-weight: 500;
   padding: 0px 15px;
 }
+
+/* Highlisghts section ends */
 
 
 
